[package]
name = "randy-ng"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive", "env", "wrap_help"] }
color-eyre = "0.6.4"
crossterm = "0.29.0"
fastrand = "2.3.0"
ratatui = "0.29.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
ureq = { version = "3.0.11", features = ["json"] }
